tests/pass/Conditional.java
package pass;

public class Conditional {
    public int cond(boolean a){
        int x = a ? 1 : 2;
        return x;
    }    
}
