tests/fail/Conditional.java
package fail;

import java.lang.System;

public class Conditional {
    public static void main(String[] args){
        int x = "abc" ? 1 : 2;
        System.out.println(x);
    }
}
